git add . gir commit -M "HOJA DE VIDA 20230307"

--- a/class html1.html
+++ b/class html1.html
@@ -62,7 +62,7 @@
                 <li class="licontenido"> <a href="#Diseno">Diseño</a></li>
                 <li class="licontenido "> <a href="#Consulta">Consulta</a></li>
                 <li class="licontenido "><a href="#Taller">Taller</a></li>
-                <li class="licontenido "><a href="#Diseno">Reto</a></li>
+                <li class="licontenido "><a href="#Reto">Reto</a></li>
             </ul>
 
         </header>
