html hoja de vida3 20230307

--- a/class html1.html
+++ b/class html1.html
@@ -19,7 +19,7 @@
     </div>
 
 
-    <h1 class="nombre">Nombre del estudiante</h1>
+    <h1 class="nombre">Alejandro Grisales Atehortua</h1>
 
     <section>
         <header>
