--- a/class html1.html
+++ b/class html1.html
@@ -101,8 +101,8 @@
             <article>
 
                 <ul>
-                    <li> <a="C:\Users\Alejo\OneDrive\Documentos\personal\ale\U\PW\Hv\Hv.html"
-                        target="_blank"item></a></li>
+                    <li> <a link="../Consultas/consultas.html"
+                        target="_blank"item></a>Consultas</li>
                     <li>item</li>
                     <li>item</li>
                     <li>item</li>
