--- a/class html1.html
+++ b/class html1.html
@@ -118,8 +118,8 @@
             <article>
 
                 <ul>
-                    <li>item</li>
-                    <li>item</li>
+                    <li><a href="https://agrisales.neocities.org">portafolio</a></h2></li>
+                    <li><a href="https://agrisales.neocities.org/HV/Hv" target="_blank">hoja de vida</a></h2></li>
                     <li>item</li>
                     <li>item</li>
                 </ul>
