--- a/class html1.html
+++ b/class html1.html
@@ -101,8 +101,7 @@
             <article>
 
                 <ul>
-                    <li> <a link="../Consultas/consultas.html"
-                        target="_blank"item></a>Consultas</li>
+                <li><a href=" https://neocities.org/site_files/text_editor/Consulta/consultas.html" target="_blank">hoja de vida</a></h2></li>
                     <li>item</li>
                     <li>item</li>
                     <li>item</li>
@@ -116,7 +115,7 @@
         <header>
             <h2 class="ttaller"><a id="#Taller">Taller</a></h2>
             <article>
-
+               
                 <ul>
                     <li><a href="https://agrisales.neocities.org">portafolio</a></h2></li>
                     <li><a href="https://agrisales.neocities.org/HV/Hv" target="_blank">hoja de vida</a></h2></li>
