--- a/Reto/Reto_1/index.html
+++ b/Reto/Reto_1/index.html
@@ -18,16 +18,7 @@
   <title>Frontend Mentor | News homepage</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution {
-      font-size: 11px;
-      text-align: center;
-    }
 
-    .attribution a {
-      color: hsl(228, 45%, 44%);
-    }
-  </style>
 </head>
 
 <body>
@@ -60,35 +51,35 @@
     </div>
 
     <div class="sidebar">
-      < <h2>New</h2>
+      <h2>New</h2>
 
-        <div class="sidebarItem">
-          <a href="#">
-            <h3> Hydrogen VS Electric Cars</h3>
-          </a>
+      <div class="sidebarItem">
+        <a href="#">
+          <h3> Hydrogen VS Electric Cars</h3>
+        </a>
 
-          <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
+        <p>Will hydrogen-fueled cars ever catch up to EVs?</p>
 
-        </div>
+      </div>
 
-        <div class="sidebarItem">
-          <a href="#">
-            <h3>The Downsides of AI Artistry</h3>
+      <div class="sidebarItem">
+        <a href="#">
+          <h3>The Downsides of AI Artistry</h3>
 
-          </a>
+        </a>
 
-          <p> What are the possible adverse effects of on-demand AI image generation?</p>
+        <p> What are the possible adverse effects of on-demand AI image generation?</p>
 
-        </div>
+      </div>
 
-        <div class="sidebarItem">
-          <a href="#">
+      <div class="sidebarItem">
+        <a href="#">
 
-            <h3>Is VC Funding Drying Up?</h3>
-          </a>
-          <p> Private funding by VC firms is down 50% YOY. We take a look at what that means.
-          </p>
-        </div>
+          <h3>Is VC Funding Drying Up?</h3>
+        </a>
+        <p> Private funding by VC firms is down 50% YOY. We take a look at what that means.
+        </p>
+      </div>
     </div>
 
 
@@ -137,8 +128,8 @@
     </div>
 
 
-    <div class="attribution">
-      Challenge by 
+    <div class="attribution" >
+      Challenge by
       <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
       Coded by <a href="#">Your Name Here</a>.
     </div>
@@ -147,17 +138,17 @@
       const menuClose = document.querySelector(".menuClose");
       const nav = document.querySelector(".nav");
       menu.addEventListener("click", () => {
-          menu.classList.toggle("hidden");
-          menuClose.classList.toggle("visible");
-          nav.classList.toggle("hidden");
+        menu.classList.toggle("hidden");
+        menuClose.classList.toggle("visible");
+        nav.classList.toggle("hidden");
       });
 
       menuClose.addEventListener("click", () => {
-          menuClose.classList.toggle("visible");
-          menu.classList.toggle("hidden");
-          nav.classList.toggle("hidden");
+        menuClose.classList.toggle("visible");
+        menu.classList.toggle("hidden");
+        nav.classList.toggle("hidden");
       });
-  </script>
+    </script>
 </body>
 
 </html>
