10042023 actualizacion en portafolio

--- a/class html1.html
+++ b/class html1.html
@@ -130,9 +130,9 @@
             <h2 class="treto"><a id="#Reto">Reto</a></h2>
             <article>
 
-
+                
                 <ul>
-                    <li>item</li>
+                    <li><a href="https://neocities.org/site_files/text_editor/Retos/Reto_1/index.html">Reto-1</a></h2></li>
                     <li>item</li>
                     <li>item</li>
                     <li>item</li>
