16042023 actualizacion en portafolio

--- a/class html1.html
+++ b/class html1.html
@@ -61,11 +61,11 @@
       <ul>
         <li>
           <h3>Taller 1</h3>
-          <a href="/C:/Users/Alejo/OneDrive/Documentos/personal/ale/U/PW/class html1.html">Ver proyecto</a>
+          <a href="https://agrisales.neocities.orgl">Ver proyecto</a>        
         </li>
         <li>
           <h3>Taller 2</h3>
-          <a href="/C:/Users/Alejo/OneDrive/Documentos/personal/ale/U/PW/Hv/Hv.html" >Ver proyecto</a>
+          <a href="https://agrisales.neocities.org/HV/Hv" >Ver proyecto</a>
         </li>
         <li>
           <h3>Proyecto 3</h3>
@@ -81,7 +81,7 @@
       <ul>
         <li>
           <h3>Consulta 1</h3>
-          <a href="/C:/Users/Alejo/OneDrive/Documentos/personal/ale/U/PW/Consultas/consultas.html">Ver proyecto</a>
+          <a href="https://agrisales.neocities.org/Consulta/consultas">Ver proyecto</a>
         </li>
         <li>
           <h3>Consulta 2</h3>
