--- a/class html1.html
+++ b/class html1.html
@@ -9,8 +9,8 @@
 <body>
   <header>
     <nav>
-        <img class="logoiue" src="../portafolio/img/logo_iue.svg" alt="logoiue" width="250px" height="250px">
-        <img class="fotografia" src="../portafolio/img/fotoperfil.svg" alt="perfil" width="250px" height="250px">
+        <img class="logoiue" src="../portafolio/img/logo_iue.svg" alt="logoiue" width="250px" height="250px" align="right">
+        <img class="fotografia" src="../portafolio/img/fotoperfil.svg" alt="perfil" width="250px" height="250px" align="left">
       <ul>
         <li><a href="#inicio">Inicio</a></li>
         <li><a href="#diseno">Diseños</a></li>
@@ -42,12 +42,12 @@
       <ul>
         <li>
           <h3>Diseño Portafolio</h3>
-          <a href="https://www.figma.com/file/5ZFlEBybmQbUEuyixWnfHJ/portafolio?node-id=1%3A2&t=0v2AAldYLjvZnTtq-1"">Ver proyecto</a>
+          <a href="https://www.figma.com/file/5ZFlEBybmQbUEuyixWnfHJ/portafolio?node-id=1%3A2&t=0v2AAldYLjvZnTtq-1" target="_blank" >Ver proyecto</a>
         </li>
         <li>
           <h3>Diseño Hoja de vida
           </h3>
-           <a href="https://www.figma.com/file/YSZQfMm59o1JBTVOkys54A/HV?node-id=0%3A1&t=8dzTbosLcIDZL1L2-1">Ver proyecto</a>
+           <a href="https://www.figma.com/file/YSZQfMm59o1JBTVOkys54A/HV?node-id=0%3A1&t=8dzTbosLcIDZL1L2-1" target="_blank">Ver proyecto</a>
         </li>
         <li>
           <h3>Proyecto 3</h3>
@@ -61,11 +61,11 @@
       <ul>
         <li>
           <h3>Taller 1</h3>
-          <a href="https://agrisales.neocities.orgl">Ver proyecto</a>        
+          <a href="https://agrisales.neocities.orgl" target="_blank">Ver proyecto</a>        
         </li>
         <li>
           <h3>Taller 2</h3>
-          <a href="https://agrisales.neocities.org/HV/Hv" >Ver proyecto</a>
+          <a href="https://agrisales.neocities.org/HV/Hv" target="_blank">Ver proyecto</a>
         </li>
         <li>
           <h3>Proyecto 3</h3>
@@ -81,7 +81,7 @@
       <ul>
         <li>
           <h3>Consulta 1</h3>
-          <a href="https://agrisales.neocities.org/Consulta/consultas">Ver proyecto</a>
+          <a href="https://agrisales.neocities.org/Consulta/consultas" target="_blank">Ver proyecto</a>
         </li>
         <li>
           <h3>Consulta 2</h3>
@@ -99,7 +99,7 @@
       <ul>
         <li>
           <h3>Reto 1</h3>
-          <li><a href="https://agrisales.neocities.org/Retos/Reto/Reto-1/">Ver proyecto</a>
+          <li><a href="https://agrisales.neocities.org/Retos/Reto/Reto-1/" target="_blank">Ver proyecto</a>
         </li>
         <li>
           <h3>Reto 2</h3>
