--- a/class html1.html
+++ b/class html1.html
@@ -68,8 +68,8 @@
           <a href="https://agrisales.neocities.org/HV/Hv" target="_blank">Ver proyecto</a>
         </li>
         <li>
-          <h3>Proyecto 3</h3>
-          <a href="#">Ver proyecto</a>
+          <h3>Taller 3</h3>
+          <a href="https://agrisales.neocities.org/eje_javascripts/" target="_blank" >Ver proyecto</a>
         </li>
       </ul>
     </section>
