--- a/Javascrips/index.html
+++ b/Javascrips/index.html
@@ -5,9 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/Javascrips/script.js">
-  <link rel="stylesheet" href="/Javascrips/style.css">
-
+  <link rel="stylesheet" href="..eje_javascripts/script.js">
+  <link rel="stylesheet" href="../eje_javascripts/style.css">
   <title>tarea 2</title>
 </head>
 
