--- a/proyecto/index.html
+++ b/proyecto/index.html
@@ -2,8 +2,13 @@
 <html>
 
 <head>
+
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Iniciar Sesión</title>
     <link rel="stylesheet" type="text/css" href="stylein.css">
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <body>
@@ -22,5 +27,34 @@
    
     <script src="scriptin.js"></script>
 </body>
+<!DOCTYPE html>
+<html>
 
+<head>
+        <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Iniciar Sesión</title>
+    <link rel="stylesheet" type="text/css" href="stylein.css">
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1"> <link rel="stylesheet" type="text/css" href="../Proyecto/css/stylein.css">
+</head>
+
+<body>
+    <div class="container">
+        <h1>Iniciar Sesión</h1>
+        <div class="form-row">
+            <label for="username" class="input-label">Usuario:</label>
+            <input type="text" id="username" class="input-field" required>
+        </div>
+        <div class="form-row">
+            <button id="loginButton" class="submit-button">Ingresar</button>
+        </div>
+    </div>
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+   
+    <script src="../Proyecto/js/scriptin.js"></script>
+</body>
+
+</html>
 </html>
