--- a/proyecto/Calendario.html
+++ b/proyecto/Calendario.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html>
 
-<head>
-    <title>Agendamiento de Citas</title>
 
+<head>
+   <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Agendamiento de Citas</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.5.0/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="../Proyecto/css/style.css">
 </head>
 
 <body>
@@ -72,13 +77,13 @@
 
     <div id="calendar"></div>
 
-    </div>
+ 
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.5.0/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.29.1/moment.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fullcalendar/3.10.2/fullcalendar.min.js"></script>
     <script src='https://cdn.jsdelivr.net/npm/fullcalendar@6.1.8/index.global.min.js'></script>
-    <script src="script.js"></script>
+    <script src="../Proyecto/js/script.js"></script>
 </body>
 
 </html>
