--- a/Consultas/consultas.html
+++ b/Consultas/consultas.html
@@ -4,13 +4,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/Consultas/estconsu.css">
+    
+    <link rel="stylesheet" href="../Consulta/estconsu.css">
     <title>Protocolos de Red</title>
 
 </head>
 
 <body>
-    <h1>Protocolos de Red</h1>
+    <h1 class="titulo">Protocolos de Red</h1>
     <div class="container">
         <div class="card">
             <H2>HTML</H2>
@@ -358,9 +359,7 @@
 
             </UL>
         </div>
-        </div>
-        
-
+ </div>
 </body>
 
 </html>
