--- a/proyecto/Calendario.html
+++ b/proyecto/Calendario.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 
 
 <head>
@@ -53,6 +53,13 @@
                         <option value="cambioAceite">Cambio de Aceite</option>
                         <option value="revisionFrenos">Revisión de Frenos</option>
                         <option value="cambioNeumaticos">Cambio de Neumáticos</option>
+                        <option value="revisionFrenos">Garantia</option>
+                        <option value="revisionFrenos">Plan de mantenimiento 5000</option>
+                        <option value="revisionFrenos">Plan de mantenimiento 10000</option>
+                        <option value="revisionFrenos">Plan de mantenimiento 20000</option>
+                        <option value="revisionFrenos">Plan de mantenimiento 30000</option>
+                        <option value="revisionFrenos">Plan de mantenimiento 40000</option>
+                       
                     </select>
                 </div>
 
