--- a/class html1.html
+++ b/class html1.html
@@ -7,10 +7,11 @@
   <link rel="stylesheet" href="../miestilo.css">
 </head>
 <body>
+
   <header>
     <nav>
-        <img class="logoiue" src="../portafolio/img/logo_iue.svg" alt="logoiue" width="250px" height="250px" align="right">
-        <img class="fotografia" src="../portafolio/img/fotoperfil.svg" alt="perfil" width="250px" height="250px" align="left">
+      <img class="logoiue" src="../portafolio/img/logo_iue.svg" alt="logoiue" width="150px" height="150px" align="right">
+      <img class="fotografia" src="../portafolio/img/fotoperfil.svg" alt="perfil" width="150px" height="150px" align="left">
       <ul>
         <li><a href="#inicio">Inicio</a></li>
         <li><a href="#diseno">Diseños</a></li>
@@ -30,11 +31,7 @@
 
     <section id="acerca">
       <h2>Acerca de mí</h2>
-      <p>Estudia te de ingeniería de sistemas e información,conceptos básicos de java,C#
-        y SQL, con experiencia demás de 2 años en proyectos de TI para software CRM, con un vasto
-        conocimiento en integración de plataformas digitales. Buenas relaciones personales, actitud de
-        servicio, orientado al resultado, comprometido y responsable.
-        Tengo conocimiento en sistemas de información y aprendo fácilmente frente las tareas asignadas..</p>
+      <p>Estudiante de ingeniería de sistemas e información, con conocimientos básicos de Java, C# y SQL, y más de 2 años de experiencia en proyectos de TI para software CRM. Poseo un amplio conocimiento en integración de plataformas digitales. Tengo buenas habilidades interpersonales, actitud de servicio, orientación a resultados, compromiso y responsabilidad. Tengo conocimiento en sistemas de información y aprendo rápidamente ante las tareas asignadas.</p>
     </section>
 
     <section id="diseno">
@@ -42,12 +39,11 @@
       <ul>
         <li>
           <h3>Diseño Portafolio</h3>
-          <a href="https://www.figma.com/file/5ZFlEBybmQbUEuyixWnfHJ/portafolio?node-id=1%3A2&t=0v2AAldYLjvZnTtq-1" target="_blank" >Ver proyecto</a>
+          <a href="https://www.figma.com/file/5ZFlEBybmQbUEuyixWnfHJ/portafolio?node-id=1%3A2&t=0v2AAldYLjvZnTtq-1" target="_blank">Ver proyecto</a>
         </li>
         <li>
-          <h3>Diseño Hoja de vida
-          </h3>
-           <a href="https://www.figma.com/file/YSZQfMm59o1JBTVOkys54A/HV?node-id=0%3A1&t=8dzTbosLcIDZL1L2-1" target="_blank">Ver proyecto</a>
+          <h3>Diseño Hoja de vida</h3>
+          <a href="https://www.figma.com/file/YSZQfMm59o1JBTVOkys54A/HV?node-id=0%3A1&t=8dzTbosLcIDZL1L2-1" target="_blank">Ver proyecto</a>
         </li>
         <li>
           <h3>Proyecto 3</h3>
@@ -61,53 +57,44 @@
       <ul>
         <li>
           <h3>Taller 1</h3>
-          <a href="https://agrisales.neocities.orgl" target="_blank">Ver proyecto</a>        
+          <a href="https://agrisales.neocities.org/" target="_blank">Ver proyecto portafolio</a>
         </li>
         <li>
           <h3>Taller 2</h3>
-          <a href="https://agrisales.neocities.org/HV/Hv" target="_blank">Ver proyecto</a>
+          <a href="https://agrisales.neocities.org/HV/Hv" target="_blank">Ver proyecto Hoja de vida</a>
         </li>
         <li>
           <h3>Taller 3</h3>
-          <a href="https://agrisales.neocities.org/eje_javascripts/" target="_blank" >Ver proyecto</a>
+          <a href="https://agrisales.neocities.org/eje_javascripts/" target="_blank">Ver proyecto ejercicios java</a>
         </li>
       </ul>
     </section>
-
-
 
     <section id="consultas">
       <h2>Consultas</h2>
       <ul>
         <li>
           <h3>Consulta 1</h3>
-          <a href="https://agrisales.neocities.org/Consulta/consultas" target="_blank">Ver proyecto</a>
+          <a href="https://agrisales.neocities.org/Consulta/consultas" target="_blank">Ver proyecto consulta</a>
         </li>
-        <li>
-          <h3>Consulta 2</h3>
-          <a href="#" >Ver proyecto</a>
-        </li>
-        <li>
-          <h3>Consulta 3</h3>
-          <a href="#">Ver proyecto</a>
-        </li>
+
       </ul>
     </section>
 
-    <section id="reto">
+    <section id="Reto">
       <h2>Retos</h2>
       <ul>
         <li>
           <h3>Reto 1</h3>
-          <li><a href="https://agrisales.neocities.org/Retos/Reto/Reto-1/" target="_blank">Ver proyecto</a>
+          <a href="https://agrisales.neocities.org/Retos/Reto/Reto-1/" target="_blank">Ver Reto pagina</a>
         </li>
         <li>
           <h3>Reto 2</h3>
-          <a href="#" >Ver proyecto</a>
+          <a href="https://agrisales.neocities.org/proyecto_maquetado/maqueta" target="_blank">Ver Reto Maquetado</a>
         </li>
         <li>
           <h3>Reto 3</h3>
-          <a href="#">Ver proyecto</a>
+          <a href="https://agrisales.neocities.org/Proyecto/">Ver Reto Final</a>
         </li>
       </ul>
     </section>
@@ -126,9 +113,6 @@
       </div>
     </footer>
     
-    
-
-  </footer>
 
 </body>
 </html>
